<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:clickable="true"
    android:background="@color/whitecolor"
    android:focusableInTouchMode="true"
    android:orientation="vertical">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginEnd="8dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        android:orientation="horizontal"
        android:weightSum="10"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <ImageView
            android:id="@+id/transactionimage"
            android:layout_width="match_parent"
            android:layout_height="80dp"
            android:layout_weight="7"
            android:layout_marginBottom="8dp"
            android:layout_marginEnd="8dp"
            android:layout_marginStart="8dp"
            android:layout_marginTop="8dp"
            app:layout_constraintBottom_toTopOf="@+id/textView"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:srcCompat="@drawable/aragon"/>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="3"
            android:gravity="center"
            android:orientation="vertical">

            <TextView
                android:id="@+id/transactionimagename"
                android:layout_width="match_parent"
                android:layout_height="37dp"
                android:layout_gravity="center"
                android:layout_marginBottom="8dp"
                android:layout_marginEnd="8dp"
                android:layout_marginStart="8dp"
                android:fontFamily="sans-serif-condensed"
                android:padding="8dp"
                android:paddingLeft="2dp"
                android:paddingRight="2dp"
                android:text="Ethereum Classic (ETC)"
                android:textAlignment="center"
                android:textColor="@color/lighterdark"
                android:textSize="14sp"
                android:textStyle="bold"
                app:layout_constraintBottom_toTopOf="@+id/linearLayout"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"/>

            <TextView
                android:id="@+id/transactionowns"
                android:layout_width="match_parent"
                android:layout_height="37dp"
                android:layout_gravity="center"
                android:layout_marginBottom="8dp"
                android:layout_marginEnd="8dp"
                android:layout_marginStart="8dp"
                android:fontFamily="sans-serif-condensed"
                android:padding="8dp"
                android:paddingLeft="2dp"
                android:paddingRight="2dp"
                android:text="@string/ownsamountof"
                android:textAlignment="center"
                android:textColor="@color/lighterdark"
                android:textSize="14sp"
                app:layout_constraintBottom_toTopOf="@+id/linearLayout"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"/>
        </LinearLayout>

    </LinearLayout>

    <LinearLayout
        android:id="@+id/linearLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginEnd="8dp"
        android:layout_marginStart="8dp"
        android:orientation="vertical"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="58dp"
            android:layout_weight="10"
            android:orientation="horizontal">

            <LinearLayout
                android:layout_width="65dp"
                android:layout_height="match_parent"
                android:gravity="center"
                android:orientation="vertical">

                <ImageView
                    android:layout_width="50dp"
                    android:layout_height="50dp"
                    android:layout_gravity="center"
                    android:padding="6dp"
                    app:srcCompat="@drawable/amount"/>

            </LinearLayout>

            <android.support.design.widget.TextInputLayout
                android:id="@+id/transactionamounthint"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textAlignment="center">

                <EditText
                    android:id="@+id/transactionamount"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:ems="10"
                    android:hint="Anzahl"
                    android:inputType="numberDecimal"
                    android:textAlignment="center"
                    />
            </android.support.design.widget.TextInputLayout>
        </LinearLayout>

        <CheckBox
            android:id="@+id/priceBoundCheckbox"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="16dp"
            android:layout_weight="10"
            android:fontFamily="sans-serif-condensed"
            android:paddingLeft="20dp"
            android:text="@string/boundtoprice"
            android:textAlignment="textStart"/>

        <Button
            android:id="@+id/transactionDifferentDate"
            android:layout_width="match_parent"
            android:layout_height="36dp"
            android:layout_marginBottom="6dp"
            android:layout_marginLeft="24dp"
            android:layout_marginRight="24dp"
            android:layout_marginTop="6dp"
            android:layout_weight="10"
            android:background="#eee"
            android:fontFamily="sans-serif-condensed"
            android:text="@string/transactiondatecurrent"
            android:textAllCaps="false"
            android:textColor="@color/realblack"
            android:textSize="12sp"/>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="58dp"
            android:orientation="horizontal">

            <LinearLayout
                android:layout_width="65dp"
                android:layout_height="match_parent"
                android:gravity="center"
                android:orientation="vertical">

                <TextView
                    android:id="@+id/customtransactioncurrency"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:fontFamily="sans-serif-condensed"
                    android:text="€"
                    android:textAlignment="center"
                    android:textColor="@android:color/black"
                    android:textSize="30sp"
                    android:textStyle="bold"/>
            </LinearLayout>

            <android.support.design.widget.TextInputLayout
                android:id="@+id/transactionamountfiathint"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textAlignment="center">

                <EditText
                    android:id="@+id/transactionamountfiat"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:ems="10"
                    android:hint="Anzahl"
                    android:inputType="numberDecimal"
                    android:textAlignment="center"
                    />
            </android.support.design.widget.TextInputLayout>

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="10"
            android:orientation="horizontal">

            <Button
                android:id="@+id/transactionaction"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_margin="8dp"
                android:layout_weight="1"
                android:background="@color/colorPrimary"
                android:fontFamily="sans-serif-condensed"
                android:text="@string/buyfinnaly"
                android:textAllCaps="false"
                android:textColor="@color/whitecolor"
                android:textSize="18sp"/>
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="10"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/transactiondisclaimer"
                android:layout_width="match_parent"
                android:layout_height="56dp"
                android:layout_weight="1"
                android:fontFamily="sans-serif-condensed"
                android:gravity="center"
                android:padding="12dp"
                android:text="@string/notrealtransactions"
                android:textAlignment="center"
                android:textColor="@color/disclaimergrey"
                android:textSize="12sp"
                android:textStyle="italic"/>
        </LinearLayout>
    </LinearLayout>
</LinearLayout>
